--- a/home.html
+++ b/home.html
@@ -56,21 +56,21 @@
         </ol>
         <div class="carousel-inner">
             <div class="carousel-item active">
-                <img class="d-block img-fluid" width="100%" src="assets/img/carousel-1.png" alt="First slide" id="cs-1">
+                <img class="d-block img-fluid" width="100%" src="assets/img/cs-1.jpg" alt="First slide" id="cs-1">
                 <div class="carousel-caption">
                     <p class="h5">Mulai Mempelajari Programming</p>
                     <p>Untuk mulai berkarya</p>
                 </div>
             </div>
             <div class="carousel-item">
-                <img class="d-block w-100" src="assets/img/carousel-2.png" alt="Second slide">
+                <img class="d-block w-100" src="assets/img/cs-2.jpg" alt="Second slide">
                 <div class="carousel-caption">
                     <p class="h5">Mudah Dan Menyenangkan</p>
                     <p>Belajar tanpa ada harus takut stress</p>
                 </div>
             </div>
             <div class="carousel-item">
-                <img class="d-block w-100" src="assets/img/carousel-3.png" alt="Third slide">
+                <img class="d-block w-100" src="assets/img/cs-3.jpg" alt="Third slide">
                 <div class="carousel-caption">
                     <p class="h5">Mulai Mempelajari Skill</p>
                     <p>Skill yang banyak dicari di perusahaan !</p>
