--- a/langganan.html
+++ b/langganan.html
@@ -51,7 +51,7 @@
     <div id="carouselExampleSlidesOnly" class="carousel slide" data-ride="carousel">
         <div class="carousel-inner">
             <div class="carousel-item active">
-                <img class="d-block w-100" height="400px" src="assets/img/carousel-4.png" alt="First slide">
+                <img class="d-block w-100" src="assets/img/cs-4.jpg" alt="First slide">
                 <div class="carousel-caption">
                     <h5 class="mt-5">Jadilah Programmer Handal</h5>
                     <p>Dengan Berlangganan di Belajar Koding Bayar Sekali, Akses Selamanya. <br>dan dapatkan serfikat.
