--- a/login.html
+++ b/login.html
@@ -53,7 +53,11 @@
     <div class="container text-center pt-5 mb-3">
         <div class="row">
             <div class="col-md-6 col-sm-12 text-center">
-                <img src="assets/img/login-icon.svg" width="250">
+                <!-- <img src="assets/img/login-icon.svg" width="250"> -->
+                <lottie-player class="mx-auto" src="https://assets5.lottiefiles.com/packages/lf20_jcikwtux.json"
+                    background="transparent" speed="1" style="width: 300px; height: 300px;" loop autoplay>
+                </lottie-player>
+
                 <h1 class="mt-3">Belajar Programming, Mulai dari Nol</h1>
                 <p class="text-muted">Belajar membuat website dan aplikasi. Bingung mulai dari mana? Tenang, mari
                     bergabung bersama Belajar Koding. Mau bekerja sebagai programmer atau membuat karya, kamu juga bisa!
@@ -110,6 +114,8 @@
     <script type="text/javascript" src="js/bootstrap.min.js"></script>
     <script type="text/javascript" src="js/ali.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/sweetalert2@10"></script>
+    <script src="https://unpkg.com/@lottiefiles/lottie-player@latest/dist/lottie-player.js"></script>
+
 
 </body>
 
