--- a/profil.html
+++ b/profil.html
@@ -2,7 +2,7 @@
 <html>
 
 <head>
-    <title>Bantuan</title>
+    <title>Profile</title>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
@@ -17,9 +17,10 @@
     <nav class="navbar navbar-expand-lg navbar-dark bg-dongker">
         <div class="container">
             <a class="navbar-brand" href="home.html">Belajar Koding</a>
-            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-		    <span class="navbar-toggler-icon"></span>
-		  </button>
+            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav"
+                aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+            </button>
             <div class="collapse navbar-collapse" id="navbarNav">
                 <ul class="navbar-nav ml-auto">
                     <li class="nav-item">
@@ -55,7 +56,8 @@
                     <div class="card foto_avatar" style="width: 18rem;">
                         <img src="assets/img/avatar-01.png" class="card-img-top avatar" alt="avatar">
                         <div class="card-body change_img">
-                            <a href="#" class="btn btn-primary" data-toggle="modal" data-target="#exampleModal">Change Image</a>
+                            <a href="#" class="btn btn-primary" data-toggle="modal" data-target="#exampleModal">Change
+                                Image</a>
                         </div>
                     </div>
                     <div class="profil">
@@ -73,8 +75,10 @@
                                 <li class="list-group-item output">086325675176</li>
                             </ul>
                         </div>
-                        <a href="#" class="btn btn-primary update" data-toggle="modal" data-target="#profil">Change Data</a>
-                        <a href="#" class="btn btn-primary disabled update" role="button" aria-disabled="true">Update</a>
+                        <a href="#" class="btn btn-primary update" data-toggle="modal" data-target="#profil">Change
+                            Data</a>
+                        <a href="#" class="btn btn-primary disabled update" role="button"
+                            aria-disabled="true">Update</a>
                     </div>
                 </div>
             </div>
@@ -88,8 +92,8 @@
                 <div class="modal-header">
                     <h5 class="modal-title" id="exampleModalLabel">Merubah foto profil</h5>
                     <button type="button" class="close" data-dismiss="modal" aria-label="Close">
-				<span aria-hidden="true">&times;</span>
-			</button>
+                        <span aria-hidden="true">&times;</span>
+                    </button>
                 </div>
                 <div class="modal-body">
                     Kamu harus menjadi akun member terlebih dahulu
@@ -107,8 +111,8 @@
                 <div class="modal-header">
                     <h5 class="modal-title" id="exampleModalLabel">Merubah data profil</h5>
                     <button type="button" class="close" data-dismiss="modal" aria-label="Close">
-				<span aria-hidden="true">&times;</span>
-			</button>
+                        <span aria-hidden="true">&times;</span>
+                    </button>
                 </div>
                 <div class="modal-body">
                     Kamu harus menjadi akun member terlebih dahulu
